--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "theme": "^0.1.0"
   },
   "devDependencies": {
