--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier . --writer"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
